<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mercury"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/mercury" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/mercury"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/venus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/venus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/venus"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/earth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/earth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/earth"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/mars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="Mars"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/jupiter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/jupiter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/jupiter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/saturn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/saturn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/saturn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/uranus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/uranus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/uranus"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/neptune"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
            <!--96 dp -->
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:src="@drawable/neptune" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/neptune"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>